patch: question and crossword
